manifest/demo-application/book-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-api-v2
spec:
  selector:
    matchLabels:
      app: books-api
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: books-api
        version: v2
    spec:
      containers:
        - name: books-api
          image: quay.io/redhattraining/3scale-books-api:2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: books-api
spec:
  selector:
    app: books-api
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
