manifest/demo-application/book-frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-frontend-v2
spec:
  selector:
    matchLabels:
      app: books-frontend
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: books-frontend
        version: v2
    spec:
      containers:
        - name: books-frontend
          image: quay.io/redhattraining/3scale-books-frontend:v2
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: books-frontend
spec:
  selector:
    app: books-frontend
    version: v2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: books-frontend
spec:
  port:
    targetPort: 3000
  to:
    name: books-frontend
